Compiler_1/src/antlr/HtmlJinjaParser.java
// Generated from antlr/HtmlJinjaParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HtmlJinjaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HTML_COMMENT=1, JINJA_COMMENT=2, SCRIPTLET=3, SEA_WS=4, DTD=5, TAG_OPEN=6, 
		SCRIPT_OPEN=7, STYLE_OPEN=8, JINJA_VAR_START=9, JINJA_BLOCK_START=10, 
		HTML_TEXT=11, TAG_JINJA_VAR=12, TAG_CLOSE=13, TAG_SLASH_CLOSE=14, TAG_SLASH=15, 
		TAG_EQUALS=16, TAG_NAME=17, TAG_WHITESPACE=18, SCRIPT_BODY=19, STYLE_BODY=20, 
		ATTVALUE_VALUE=21, ATTRIBUTE=22, JINJA_WS=23, JINJA_BLOCK_END=24, JINJA_VAR_END=25, 
		JINJA_IF=26, JINJA_ELIF=27, JINJA_ELSE=28, JINJA_ENDIF=29, JINJA_FOR=30, 
		JINJA_IN=31, JINJA_ENDFOR=32, JINJA_SET=33, JINJA_WHILE=34, JINJA_ENDWHILE=35, 
		JINJA_EXTENDS=36, JINJA_AND=37, JINJA_OR=38, JINJA_NOT=39, JINJA_IS=40, 
		JINJA_NONE=41, JINJA_BOOL=42, JINJA_BLOCK=43, JINJA_ENDBLOCK=44, JINJA_ADD=45, 
		JINJA_SUB=46, JINJA_MUL=47, JINJA_DIV=48, JINJA_SEQ=49, JINJA_EQ=50, JINJA_NEQ=51, 
		JINJA_GT=52, JINJA_LT=53, JINJA_GTEQ=54, JINJA_LTEQ=55, JINJA_DQ=56, JINJA_SQ=57, 
		JINJA_LP=58, JINJA_RP=59, JINJA_LSP=60, JINJA_RSP=61, JINJA_DOT=62, JINJA_PIP=63, 
		JINJA_TILDE=64, JINJA_COMA=65, JINJA_ID=66, JINJA_INT=67, JINJA_DOUBLE=68, 
		JINJA_STRING=69;
	public static final int
		RULE_block_statement = 0, RULE_block_open = 1, RULE_block_close = 2, RULE_htmlDocument = 3, 
		RULE_extends_statement = 4, RULE_scriptletOrSeaWs = 5, RULE_htmlElement = 6, 
		RULE_htmlContent = 7, RULE_htmlAttribute = 8, RULE_htmlChardata = 9, RULE_htmlMisc = 10, 
		RULE_htmlComment = 11, RULE_jinjaComment = 12, RULE_jinjaExpression = 13, 
		RULE_expression = 14, RULE_arguments = 15, RULE_argument = 16, RULE_jinja_statement = 17, 
		RULE_assignment_statement = 18, RULE_if_statement = 19, RULE_if_fragment = 20, 
		RULE_elif_statement = 21, RULE_elif_fragment = 22, RULE_else_statement = 23, 
		RULE_else_fragment = 24, RULE_endif_fragment = 25, RULE_while_statement = 26, 
		RULE_while_fragment = 27, RULE_endwhile_fragment = 28, RULE_for_statement = 29, 
		RULE_for_fragment = 30, RULE_for_target = 31, RULE_endfor_fragment = 32, 
		RULE_script = 33, RULE_style = 34, RULE_templateContent = 35, RULE_htmlTagContent = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"block_statement", "block_open", "block_close", "htmlDocument", "extends_statement", 
			"scriptletOrSeaWs", "htmlElement", "htmlContent", "htmlAttribute", "htmlChardata", 
			"htmlMisc", "htmlComment", "jinjaComment", "jinjaExpression", "expression", 
			"arguments", "argument", "jinja_statement", "assignment_statement", "if_statement", 
			"if_fragment", "elif_statement", "elif_fragment", "else_statement", "else_fragment", 
			"endif_fragment", "while_statement", "while_fragment", "endwhile_fragment", 
			"for_statement", "for_fragment", "for_target", "endfor_fragment", "script", 
			"style", "templateContent", "htmlTagContent"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "'{{'", "'{%'", 
			null, null, null, "'/>'", null, null, null, null, null, null, null, null, 
			null, "'%}'", "'}}'", "'if'", "'elif'", "'else'", "'endif'", "'for'", 
			"'in'", "'endfor'", "'set'", "'while'", "'endwhile'", "'extends'", "'and'", 
			"'or'", "'not'", "'is'", null, null, "'block'", "'endblock'", "'+'", 
			"'-'", "'*'", null, null, "'=='", "'!='", null, null, "'>='", "'<='", 
			"'\"'", "'''", "'('", "')'", "'['", "']'", "'.'", "'|'", "'~'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HTML_COMMENT", "JINJA_COMMENT", "SCRIPTLET", "SEA_WS", "DTD", 
			"TAG_OPEN", "SCRIPT_OPEN", "STYLE_OPEN", "JINJA_VAR_START", "JINJA_BLOCK_START", 
			"HTML_TEXT", "TAG_JINJA_VAR", "TAG_CLOSE", "TAG_SLASH_CLOSE", "TAG_SLASH", 
			"TAG_EQUALS", "TAG_NAME", "TAG_WHITESPACE", "SCRIPT_BODY", "STYLE_BODY", 
			"ATTVALUE_VALUE", "ATTRIBUTE", "JINJA_WS", "JINJA_BLOCK_END", "JINJA_VAR_END", 
			"JINJA_IF", "JINJA_ELIF", "JINJA_ELSE", "JINJA_ENDIF", "JINJA_FOR", "JINJA_IN", 
			"JINJA_ENDFOR", "JINJA_SET", "JINJA_WHILE", "JINJA_ENDWHILE", "JINJA_EXTENDS", 
			"JINJA_AND", "JINJA_OR", "JINJA_NOT", "JINJA_IS", "JINJA_NONE", "JINJA_BOOL", 
			"JINJA_BLOCK", "JINJA_ENDBLOCK", "JINJA_ADD", "JINJA_SUB", "JINJA_MUL", 
			"JINJA_DIV", "JINJA_SEQ", "JINJA_EQ", "JINJA_NEQ", "JINJA_GT", "JINJA_LT", 
			"JINJA_GTEQ", "JINJA_LTEQ", "JINJA_DQ", "JINJA_SQ", "JINJA_LP", "JINJA_RP", 
			"JINJA_LSP", "JINJA_RSP", "JINJA_DOT", "JINJA_PIP", "JINJA_TILDE", "JINJA_COMA", 
			"JINJA_ID", "JINJA_INT", "JINJA_DOUBLE", "JINJA_STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HtmlJinjaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private boolean isVoidElement(String tagName) {
	        String t = tagName.toLowerCase();
	        return t.equals("area") || t.equals("base") || t.equals("br") || t.equals("col") ||
	               t.equals("embed") || t.equals("hr") || t.equals("img") || t.equals("input") ||
	               t.equals("link") || t.equals("meta") || t.equals("param") || t.equals("source") ||
	               t.equals("track") || t.equals("wbr");
	    }

	public HtmlJinjaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Block_statementContext extends ParserRuleContext {
		public Block_openContext block_open() {
			return getRuleContext(Block_openContext.class,0);
		}
		public Block_closeContext block_close() {
			return getRuleContext(Block_closeContext.class,0);
		}
		public List<TemplateContentContext> templateContent() {
			return getRuleContexts(TemplateContentContext.class);
		}
		public TemplateContentContext templateContent(int i) {
			return getRuleContext(TemplateContentContext.class,i);
		}
		public Block_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterBlock_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitBlock_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitBlock_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Block_statementContext block_statement() throws RecognitionException {
		Block_statementContext _localctx = new Block_statementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_block_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			block_open();
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(75);
					templateContent();
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(81);
			block_close();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Block_openContext extends ParserRuleContext {
		public TerminalNode JINJA_BLOCK_START() { return getToken(HtmlJinjaParser.JINJA_BLOCK_START, 0); }
		public TerminalNode JINJA_BLOCK() { return getToken(HtmlJinjaParser.JINJA_BLOCK, 0); }
		public TerminalNode JINJA_BLOCK_END() { return getToken(HtmlJinjaParser.JINJA_BLOCK_END, 0); }
		public TerminalNode JINJA_ID() { return getToken(HtmlJinjaParser.JINJA_ID, 0); }
		public Block_openContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_open; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterBlock_open(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitBlock_open(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitBlock_open(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Block_openContext block_open() throws RecognitionException {
		Block_openContext _localctx = new Block_openContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block_open);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(JINJA_BLOCK_START);
			setState(84);
			match(JINJA_BLOCK);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==JINJA_ID) {
				{
				setState(85);
				match(JINJA_ID);
				}
			}

			setState(88);
			match(JINJA_BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Block_closeContext extends ParserRuleContext {
		public TerminalNode JINJA_BLOCK_START() { return getToken(HtmlJinjaParser.JINJA_BLOCK_START, 0); }
		public TerminalNode JINJA_ENDBLOCK() { return getToken(HtmlJinjaParser.JINJA_ENDBLOCK, 0); }
		public TerminalNode JINJA_BLOCK_END() { return getToken(HtmlJinjaParser.JINJA_BLOCK_END, 0); }
		public TerminalNode JINJA_ID() { return getToken(HtmlJinjaParser.JINJA_ID, 0); }
		public Block_closeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_close; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterBlock_close(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitBlock_close(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitBlock_close(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Block_closeContext block_close() throws RecognitionException {
		Block_closeContext _localctx = new Block_closeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block_close);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(JINJA_BLOCK_START);
			setState(91);
			match(JINJA_ENDBLOCK);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==JINJA_ID) {
				{
				setState(92);
				match(JINJA_ID);
				}
			}

			setState(95);
			match(JINJA_BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlDocumentContext extends ParserRuleContext {
		public List<ScriptletOrSeaWsContext> scriptletOrSeaWs() {
			return getRuleContexts(ScriptletOrSeaWsContext.class);
		}
		public ScriptletOrSeaWsContext scriptletOrSeaWs(int i) {
			return getRuleContext(ScriptletOrSeaWsContext.class,i);
		}
		public List<TerminalNode> DTD() { return getTokens(HtmlJinjaParser.DTD); }
		public TerminalNode DTD(int i) {
			return getToken(HtmlJinjaParser.DTD, i);
		}
		public List<Extends_statementContext> extends_statement() {
			return getRuleContexts(Extends_statementContext.class);
		}
		public Extends_statementContext extends_statement(int i) {
			return getRuleContext(Extends_statementContext.class,i);
		}
		public List<Jinja_statementContext> jinja_statement() {
			return getRuleContexts(Jinja_statementContext.class);
		}
		public Jinja_statementContext jinja_statement(int i) {
			return getRuleContext(Jinja_statementContext.class,i);
		}
		public List<JinjaCommentContext> jinjaComment() {
			return getRuleContexts(JinjaCommentContext.class);
		}
		public JinjaCommentContext jinjaComment(int i) {
			return getRuleContext(JinjaCommentContext.class,i);
		}
		public List<HtmlMiscContext> htmlMisc() {
			return getRuleContexts(HtmlMiscContext.class);
		}
		public HtmlMiscContext htmlMisc(int i) {
			return getRuleContext(HtmlMiscContext.class,i);
		}
		public List<HtmlElementContext> htmlElement() {
			return getRuleContexts(HtmlElementContext.class);
		}
		public HtmlElementContext htmlElement(int i) {
			return getRuleContext(HtmlElementContext.class,i);
		}
		public HtmlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterHtmlDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitHtmlDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitHtmlDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlDocumentContext htmlDocument() throws RecognitionException {
		HtmlDocumentContext _localctx = new HtmlDocumentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_htmlDocument);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(99);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SCRIPTLET:
					case SEA_WS:
						{
						setState(97);
						scriptletOrSeaWs();
						}
						break;
					case DTD:
						{
						setState(98);
						match(DTD);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2014L) != 0)) {
				{
				setState(109);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(104);
					extends_statement();
					}
					break;
				case 2:
					{
					setState(105);
					jinja_statement();
					}
					break;
				case 3:
					{
					setState(106);
					jinjaComment();
					}
					break;
				case 4:
					{
					setState(107);
					htmlMisc();
					}
					break;
				case 5:
					{
					setState(108);
					htmlElement();
					}
					break;
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Extends_statementContext extends ParserRuleContext {
		public TerminalNode JINJA_BLOCK_START() { return getToken(HtmlJinjaParser.JINJA_BLOCK_START, 0); }
		public TerminalNode JINJA_EXTENDS() { return getToken(HtmlJinjaParser.JINJA_EXTENDS, 0); }
		public TerminalNode JINJA_STRING() { return getToken(HtmlJinjaParser.JINJA_STRING, 0); }
		public TerminalNode JINJA_BLOCK_END() { return getToken(HtmlJinjaParser.JINJA_BLOCK_END, 0); }
		public Extends_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extends_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterExtends_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitExtends_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitExtends_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Extends_statementContext extends_statement() throws RecognitionException {
		Extends_statementContext _localctx = new Extends_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_extends_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(JINJA_BLOCK_START);
			setState(115);
			match(JINJA_EXTENDS);
			setState(116);
			match(JINJA_STRING);
			setState(117);
			match(JINJA_BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptletOrSeaWsContext extends ParserRuleContext {
		public TerminalNode SCRIPTLET() { return getToken(HtmlJinjaParser.SCRIPTLET, 0); }
		public TerminalNode SEA_WS() { return getToken(HtmlJinjaParser.SEA_WS, 0); }
		public ScriptletOrSeaWsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptletOrSeaWs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).enterScriptletOrSeaWs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlJinjaParserListener ) ((HtmlJinjaParserListener)listener).exitScriptletOrSeaWs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlJinjaParserVisitor ) return ((HtmlJinjaParserVisitor<? extends T>)visitor).visitScriptletOrSeaWs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptletOrSeaWsContext scriptletOrSeaWs() throws RecognitionException {
		ScriptletOrSeaWsContext _localctx = new ScriptletOrSeaWsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_scriptletOrSeaWs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==SCRIPTLET || _la==SEA_WS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
